--- a/.github/workflows/mavenReusable.yml
+++ b/.github/workflows/mavenReusable.yml
@@ -16,7 +16,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
      - name: Build with Maven
-       run: mvn -B package --file pom.xml
+       run: |
+       mvn -B package --file pom.xml
 	   
 name: Spring Boot CI/CD Pipeline
 
