--- a/.github/workflows/mavenReusable.yml
+++ b/.github/workflows/mavenReusable.yml
@@ -1,5 +1,5 @@
 name: Maven Reusable Workflow
-run-name: GitHub Action Maven Reusable Workflow
+
 on:
   workflow_dispatch:
   workflow_call:
@@ -8,17 +8,18 @@ jobs:
   Maven-Workflow:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v3
-     - name: Set up JDK 17
-       uses: actions/setup-java@v3
-       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-     - name: Build with Maven
-       run: |
-       mvn -B package --file pom.xml
-	   
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: |
+          mvn -B package --file pom.xml
+
+# Assuming this is a separate workflow file
 name: Spring Boot CI/CD Pipeline
 
 on:
@@ -28,6 +29,5 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
     uses: ./.github/workflows/maven-reusable.yml
