--- a/.github/workflows/mavenReusable.yml
+++ b/.github/workflows/mavenReusable.yml
@@ -1,33 +1,26 @@
 name: Maven Reusable Workflow
-
+run-name: GitHub Action Maven Reusable Workflow
 on:
   workflow_dispatch:
   workflow_call:
-
+    inputs:
+      build-script:
+        required: true
+        type: string
 jobs:
   Maven-Workflow:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: |
-          mvn -B package --file pom.xml
-
-# Assuming this is a separate workflow file
-#name: Spring Boot CI/CD Pipeline
-
-#on:
- # push:
-  #  branches: [ "master", "develop" ]
-  #pull_request:
-   # branches: [ "master" ]
-
-#jobs:
- # build:
-   # uses: ./.github/workflows/maven-reusable.yml
+     - uses: actions/checkout@v3
+     - name: Set up JDK 17
+       uses: actions/setup-java@v3
+       with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+     - name: Build with Maven
+       run: mvn -B package --file ${{ inputs.build-script }}
+     - uses: actions/upload-artifact@v3
+       with:
+        name: buildArtifact
+        path: target/*.war   
