--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,53 +1,17 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
-
+name: Tomcat Reusable Workflow
+run-name: GitHub Action Tomcat Reusable Workflow
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
   workflow_dispatch:
-
-env:
-  mavenGoal: "clean install"
+  workflow_call:
+    secrets:
+      host:
+        required: true
+      user:
+        required: true
+      password:
+        required: true
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      buildScript: "pom.xml"
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: "mvn -B ${mavenGoal} --file ${buildScript}"
-    
-    #commentout
-    - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #commentIn
-      
-    - uses: actions/upload-artifact@v3
-      with:
-       name: buildArtifact
-       path: target/*.war      
-      
-  deploy:
-    needs: build
+  Tomcat-Workflow:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/download-artifact@v3
@@ -56,16 +20,17 @@ jobs:
      - name: Production Deployment
        run: |
           ls -lart 
+          echo ${{ secrets.host }}
      - name: scp ssh pipelines
        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
        env:
          LASTSSH: "Doing something after copying"
        with:
-         host: ${{ secrets.DC_HOST }}
-         user: ${{ secrets.DC_USER }}
-         pass: ${{ secrets.DC_KEY }}
+         host: ${{ secrets.host }}
+         user: ${{ secrets.user }}
+         pass: ${{ secrets.password }}
          scp: |
-          ./*.war => /tmp/Anuj.war
+          ./*.war => /tmp/
          last_ssh: |
-            sudo cp /tmp/Anuj.war /var/lib/tomcat9/webapps/Anuj.war
+            sudo cp /tmp/*.war /var/lib/tomcat9/webapps/Anuj.war
             ls -la
